--- a/src/App/index.css
+++ b/src/App/index.css
@@ -1,9 +1,19 @@
 /* Importing Roboto and Staatliches typefaces */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700|Staatliches&display=swap");
+/* Colors */
+/* Times */
+/* Screen breakpoints */
+/* Dimensions */
 * {
   margin: 0;
   padding: 0;
   font-family: Roboto, sans-serif;
+  outline: none;
+}
+
+*::selection {
+  color: #ED1E24;
+  background-color: white;
 }
 
 /*# sourceMappingURL=index.css.map */
