--- a/src/layouts/PokedexLayout/index.scss
+++ b/src/layouts/PokedexLayout/index.scss
@@ -4,27 +4,31 @@
   background-color: $pokemonRed;
   color: white;
   overflow-x: hidden;
+  position: relative;
+  min-height: 100vh;
   nav {
+    position: relative;
     padding: 16px;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-between;
     .pokemon-buttons {
-      @media screen and (max-width: $breakpointMd) {
-        display: none;
-      }
       display: grid;
       grid-auto-flow: column;
       .blue-sensor {
-        width: 72px;
-        margin-right: 20px;
+        width: calc(3vw + 3rem);
+        margin-right: 2vw;
       }
       img:not(.blue-sensor) {
-        width: 24px;
-        margin-right: 8px;
+        width: calc(1vw + 1rem);
+        margin-right: calc(.5vw + .25rem);
       }
     }
     .pokedex-title {
+      align-self: center;
+      @media screen and (max-width: $breakpointMd) {
+        display: none;
+      }
       h1 {
         font-size: calc(2vw + .5rem);
         font-weight: lighter;
@@ -36,14 +40,29 @@
     }
   }
   .background-decoration {
-    display: flex;
-    align-items: start;
     img {
       position: relative;
     }
-    .decoration-line {
+    img {
       width: calc(100vw + 64px);
-      transform: translateX(-32px) translateY(-12px);
+      transform: translateX(-32px) translateY(-1vw);
+      @media screen and (max-width: $breakpointMd) {
+        width: calc(150vw + 64px);
+      }
+    }
+  }
+  .background-pokeball {
+    opacity: .1;
+    position: absolute;
+    right: -1vw;
+    top: -1vw;
+    img {
+      width: 40vw;
+      min-width: 320px;
+      max-width: 960px;
+      @media screen and (max-width: $breakpointMd) {
+        display: none;
+      }
     }
   }
 }
