--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,20 @@
 /* Colors */
 $pokemonRed: #ED1E24;
+$pokemonRed15: rgba(237, 30, 36, 0.15);
+$pokemonRed30: rgba(237, 30, 36, 0.3);
 $pokemonBlue: #3476CC;
 $pokemonYellow: #F5CC04;
 $pokemonGreen: #43CC34;
 
+/* Times */
+$timeShort: .2s;
+
 /* Screen breakpoints */
 $breakpointMd: 768px;
+
+/* Dimensions */
+$xSmall: 2px;
+$small: 4px;
+$medium: 8px;
+$large: 12px;
+$xLarge: 16px;
