Added Pokemon listing and store details

--- a/src/layouts/PokedexLayout/index.css
+++ b/src/layouts/PokedexLayout/index.css
@@ -72,5 +72,8 @@
     display: none;
   }
 }
+.pokedex-layout .children-wrapper {
+  position: relative;
+}
 
 /*# sourceMappingURL=index.css.map */
