--- a/src/views/pokemon/List/index.css
+++ b/src/views/pokemon/List/index.css
@@ -1,8 +1,62 @@
+/* Colors */
+/* Times */
+/* Screen breakpoints */
+/* Dimensions */
 .page-list {
   padding: calc(1vw + 1rem);
   display: grid;
   grid-auto-flow: row;
   justify-content: stretch;
+}
+.page-list .pokemons-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, calc(8vw + 16rem));
+  justify-content: center;
+  grid-gap: calc(16px);
+  list-style: none;
+  padding: calc(1vw + 1rem) 0;
+}
+.page-list .pokemons-list li {
+  border: 3px solid black;
+  background-color: white;
+  border-radius: 2px;
+  overflow: hidden;
+  position: relative;
+}
+.page-list .pokemons-list li .pokemon-image {
+  width: calc(8vw + 20rem);
+  height: calc(8vw + 20rem);
+}
+.page-list .pokemons-list li .pokemon-data {
+  position: absolute;
+  left: 0;
+  bottom: 24px;
+  border: 3px solid black;
+  border-left: none;
+  background-color: rgba(237, 30, 36, 0.8);
+  padding: calc(.5vw + .5rem);
+}
+.page-list .pokemons-list li .pokemon-data .pokemon-name {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: start;
+  grid-gap: 8px;
+}
+.page-list .pokemons-list li .pokemon-data .pokemon-name p {
+  font-family: Staatliches, sans-serif;
+  font-size: calc(1vw + 1.5rem);
+}
+.page-list .pokemons-list li .pokemon-data .pokemon-name span {
+  font-family: Consolas, Roboto, sans-serif;
+  font-size: calc(.5vw + .5rem);
+  opacity: 0.75;
+}
+.page-list .pokemons-list li .pokemon-data .pokemon-types {
+  display: grid;
+  grid-gap: 8px;
+  grid-auto-flow: column;
+  justify-content: start;
 }
 
 /*# sourceMappingURL=index.css.map */
