--- a/src/components/SearchInput/index.css
+++ b/src/components/SearchInput/index.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 /* Colors */
 /* Times */
 /* Screen breakpoints */
 /* Dimensions */
+/* Pokémon's Color of Types */
 .search-input-button {
   background-color: transparent;
   border: none;
