--- a/src/components/TextInput/index.css
+++ b/src/components/TextInput/index.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 /* Colors */
 /* Times */
 /* Screen breakpoints */
 /* Dimensions */
+/* Pokémon's Color of Types */
 .text-input-container {
   background-color: white;
   border-radius: 1000px;
