--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,3 +21,23 @@ $medium: 8px;
 $large: 12px;
 $xLarge: 16px;
 $xxLarge: 32px;
+
+/* Pokémon's Color of Types */
+$typeBug: #ccb54f;
+$typeDark: #000000;
+$typeDragon: #db0000;
+$typeElectric: #ffa80a;
+$typeFairy: #d1b64c;
+$typeFighting: #ff0000;
+$typeFire: #ff7e00;
+$typeFlying: #009dff;
+$typeGhost: #6e77a8;
+$typeGrass: #4cb161;
+$typeGround: #803928;
+$typeIce: #527fa3;
+$typeNormal: #5e5e5e;
+$typePoison: #ff3844;
+$typePsychic: #7d4cff;
+$typeRock: #999999;
+$typeSteel: #616161;
+$typeWater: #007aff;
