--- a/src/components/PageStatus/index.css
+++ b/src/components/PageStatus/index.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 /* Colors */
 /* Times */
 /* Screen breakpoints */
 /* Dimensions */
+/* Pokémon's Color of Types */
 .page-status {
   display: grid;
   grid-auto-flow: column;
