--- a/src/layouts/PokedexLayout/index.css
+++ b/src/layouts/PokedexLayout/index.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 /* Colors */
 /* Times */
 /* Screen breakpoints */
 /* Dimensions */
+/* Pokémon's Color of Types */
 .pokedex-layout {
   background-color: #ED1E24;
   color: white;
@@ -13,7 +15,7 @@
   position: relative;
   padding: 16px;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
 }
 .pokedex-layout nav .pokemon-buttons {
