--- a/src/components/TextInput/index.css
+++ b/src/components/TextInput/index.css
@@ -15,6 +15,7 @@
   background-color: transparent;
   padding: 0.5rem 1.5rem;
   font-size: calc(.3vw + .7rem);
+  max-width: 20vw;
 }
 .text-input-container .text-input::selection {
   background-color: #ED1E24;
