Updating list to be lazy and query string syncing

--- a/src/views/pokemon/Details/index.css
+++ b/src/views/pokemon/Details/index.css
@@ -41,7 +41,7 @@
 }
 .page-details .pokemon-details .pokemon-image {
   background-color: white;
-  border: 3px solid black;
+  border: calc(.075vw + .1rem) solid black;
   display: flex;
   max-width: calc(15vw + 15rem);
   max-height: calc(15vw + 15rem);
