--- a/src/views/pokemon/Details/index.scss
+++ b/src/views/pokemon/Details/index.scss
@@ -31,7 +31,7 @@
     }
     .pokemon-image {
       background-color: white;
-      border: $xSmall solid black;
+      border: calc(.075vw + .1rem) solid black;
       display: flex;
       max-width: calc(15vw + 15rem);
       max-height: calc(15vw + 15rem);
