--- a/src/views/pokemon/List/index.scss
+++ b/src/views/pokemon/List/index.scss
@@ -11,6 +11,7 @@
     grid-auto-flow: column;
     justify-content: start;
     justify-items: start;
+    align-items: center;
     grid-gap: calc(.5vw + .5rem);
     @media screen and (max-width: $breakpointMd) {
       grid-auto-flow: row;
@@ -18,6 +19,9 @@
       & > *:not(:first-child) {
         justify-self: center;
       }
+    }
+    .loading-pokemons {
+      font-size: calc(.5vw + .75rem);
     }
   }
   .pokemons-list {
@@ -27,7 +31,7 @@
     grid-gap: calc(16px);
     list-style: none;
     li {
-      border: $xSmall solid black;
+      border: calc(.075vw + .1rem) solid black;
       background-color: white;
       border-radius: $xxSmall;
       overflow: hidden;
@@ -42,6 +46,7 @@
         height: calc(8vw + 20rem);
         transition: transform $timeShort;
         display: flex;
+        margin-left: -2rem; // ((8vw + 20rem) - (8vw + 16rem)) / 2
       }
       .pokemon-data {
         position: absolute;
